# SeqDelta

./: .gitignore  README.md  app.py  cli.py  pyproject.toml
docs/: index.html
examples/: frameshift.fasta  missense.fasta  reference.fasta  silent.fasta  substitution.fasta
sample_data/: mutant_deletion_frameshift.fasta  mutant_insertion_frameshift.fasta  mutant_missense.fasta  mutant_nonsense.fasta  mutant_silent.fasta  reference.fasta
seqdelta/: __init__.py  alignment.py  cli.py  models.py  mutation.py  parser.py  report.py  translation.py  visualization.py  web.py
seqdelta/assets/static/: app.js  style.css
seqdelta/assets/templates/: index.html  results.html
templates/: base.html
tests/: test_seqdelta.py
